[package]
name = "mini-dmz"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13"
# TODO: eval bevy-inspector-egui for 0.13
bevy-inspector-egui = "0.23.4"
# below: hardcoded version of :
# cargo run --features bevy/dynamic_linking
# TODO test features with 0.13
# bevy = { version = "0.13", features = ["dynamic_linking"] }
# bevy = { version = "0.13", features = ["wayland"] }

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
